[gd_scene load_steps=5 format=3 uid="uid://5sj26n7fj0nk"]

[ext_resource type="Script" path="res://scripts/shoot.gd" id="1_g3x6k"]
[ext_resource type="Texture2D" uid="uid://dwk66wg76fl1p" path="res://sprites/shoot.png" id="2_lg0ql"]
[ext_resource type="AudioStream" uid="uid://dk36u4pqqbh1u" path="res://audio/shoot/Fire 4.mp3" id="3_8f33t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5o6c2"]
size = Vector2(6, 6)

[node name="shoot" type="Area2D"]
script = ExtResource("1_g3x6k")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_lg0ql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5o6c2")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8f33t")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
